[package]
name = "sh_os"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader = "0.9" #simplifies the bootloader process
volatile = "0.2.6"
spin = "0.9.8"

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-display", "none"]
test-success-exit-code = 33

[[bin]]
name = "sh_os"
test = false
bench = false

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]